admission/ValidatingAdmissionPolicy/policies/apparmor-profile/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apparmor-profile-containers
  annotations:
    kubeapt.io/uuid: "f95bfa81-151f-47a8-b98b-098085ab75bf"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    securityContext:
      appArmorProfile:
        type: Unconfined
